# flac_music

./: .gitignore  Cargo.toml  Makefile  README.md
.github/workflows/: rust.yml
extra/macos/flac_music.app/Contents/: Info.plist
extra/macos/flac_music.app/Contents/Frameworks/: libavdevice.59.dylib  libavutil.57.dylib  libswresample.4.dylib  libswscale.6.dylib
extra/macos/flac_music.app/Contents/Resources/: flac_music.icns
extra/macos/flac_music.app/Contents/Resources/i18n/zh-CN/: builtin.ftl
src/: main.rs
