[package]
name = "flac_music"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
druid = { version = "0.7.0", features = ['im','svg','image','png'] }
rodio = { version = "0.16.0", features = ['symphonia-all','flac', 'vorbis', 'wav', 'mp3']}
ffmpeg-next = "5.1.1"
